--- a/src/Pages/Layouts/NavBar/NavBar.scss
+++ b/src/Pages/Layouts/NavBar/NavBar.scss
@@ -1,11 +1,21 @@
-$main-color-0: #eae5e1;
-$main-color-1: #faedd8;
-$main-color-2: #d9c19d;
-$main-color-3: #b7966b;
-$main-color-4: #946d43;
-$main-color-5: #724a24;
-$main-color-6: #502b0f;
-$main-color-7: #2e1402;
+// $main-color-0.0: #eae5e1;
+// $main-color-1.1: #faedd8;
+// $main-color-2.2: #d9c19d;
+// $main-color-3.3: #b7966b;
+// $main-color-4.4: #946d43;
+// $main-color-5.5: #724a24;
+// $main-color-6.6: #502b0f;
+// $main-color-7.7: #2e1402;
+$main-color-0: #e9e9e5;
+$main-color-1: #ededeb;
+$main-color-2: #9c8d77;
+$main-color-3: #bfb6aa;
+$main-color-4: #a89f93;
+$main-color-5: #c7c3ba;
+$main-color-6: #cfc9bb;
+$main-color-7: #dddad1;
+$main-color-8: #626262;
+$main-color-9: #2e1402;
 
 * {
   margin: 0;
@@ -16,8 +26,8 @@ $main-color-7: #2e1402;
 .NavBar {
   width: 100%;
   height: 60px;
-  background-color: $main-color-1;
-  border: 1px solid $main-color-6;
+  background-color: $main-color-7;
+  border: 1px solid $main-color-0;
 
   header,nav{
     height: 60px;
@@ -33,11 +43,11 @@ $main-color-7: #2e1402;
       list-style-type: none;
       font-size: 25px;
       padding: 30px;
-      font-family: Nunito;
+      // font-family: Nunito;
 
       a{
         text-decoration: none;
-        color: $main-color-6;
+        color: $main-color-2;
       }
     }
   }
