--- a/src/Pages/Layouts/NavBar/NavBar.scss
+++ b/src/Pages/Layouts/NavBar/NavBar.scss
@@ -42,8 +42,7 @@ $main-color-9: #2e1402;
     li {
       list-style-type: none;
       font-size: 25px;
-      padding: 30px;
-      // font-family: Nunito;
+      padding-right: 50px;
 
       a{
         text-decoration: none;
