--- a/src/Pages/Home/Home.scss
+++ b/src/Pages/Home/Home.scss
@@ -17,6 +17,22 @@ $main-color-7: #dddad1;
 $main-color-8: #626262;
 $main-color-9: #2e1402;
 
-body{
-    background-color: $main-color-0;
+body {
+  background-color: $main-color-0;
+}
+
+.Home {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end;
+  font-family: Quicksand;
+  .Home-main {
+    width: 100%;
+    height: 500px;
+    background-image: url("../../public/H/H-main.jpg");
+    background-repeat: no-repeat;
+    background-position-x: right;
+    background-size: contain;
+  }
 }
