--- a/src/Pages/Home/Home.scss
+++ b/src/Pages/Home/Home.scss
@@ -1,16 +1,20 @@
 @import "../variables";
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   background-color: $main-color-0;
 }
 
 .Home {
-  font-family: Quicksand;
+  // font-family: Quicksand;
 
   .Home-main {
     padding-top: 50px;
     width: 100%;
-    height: 500px;
+    height: 550px;
     background-image: url("../../public/E/H-main_LE_photos_v2_x2.jpg");
     background-repeat: no-repeat;
     background-size: contain;
@@ -30,6 +34,7 @@ body {
       span {
         padding-left: 50px;
         padding-top: 20px;
+        line-height: 1.4;
       }
 
       span {
@@ -65,14 +70,15 @@ body {
       grid-area: about2;
       background-color: $main-color-3;
       text-align: right;
+      line-height: 1.4;
 
-      h3{
+      h3 {
         font-size: 24px;
       }
 
       p {
         margin: 10px;
-        font-family: $font3;
+        // font-family: $font3;
         font-size: 20px;
       }
     }
@@ -90,15 +96,53 @@ body {
     }
   }
 
-  .Home-Piranha{
+  .Home-Piranha {
     margin-top: 90px;
     width: 100%;
-    height: 600px;
-    background-image: url("../../../public/E/HHH.jpeg");
+    height: 650px;
+    background-image: url("../../../public/E/H-Piranha.jpg");
     background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
     margin-top: -20px;
     background-position: 73% 34%;
+  }
+
+  .Home-History {
+    width: 100%;
+    height: 700px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+
+    .Home-imgs {
+      width: 450px;
+      height: 450px;
+      border: 4px solid $main-color-2;
+      position: relative;
+
+      .Home-image1 {
+        bottom: -10%;
+        right: -22%;
+        width: 300px;
+        position: absolute;
+      }
+
+      .Home-image2 {
+        top: -10%;
+        left: -22%;
+        width: 300px;
+        position: absolute;
+      }
+    }
+
+    .Home-Text {
+      // font-family: $font3;
+      width: 40%;
+      font-size: 20px;
+      line-height: 1.4;
+      color: $main-color-9;
+      font-weight: 600;
+    }
   }
 }
