--- a/src/Pages/Layouts/Footer/Footer.scss
+++ b/src/Pages/Layouts/Footer/Footer.scss
@@ -9,8 +9,8 @@
   color: $main-color-2;
   border: 1px solid $main-color-0;
   font-size: 18px;
-	
-
+  line-height: 1.4;
+  
 	.Footer-box{
 		padding: 30px;
 		display: flex;
