--- a/src/Pages/_variables.scss
+++ b/src/Pages/_variables.scss
@@ -8,15 +8,13 @@ $main-color-6: #cfc9bb;
 $main-color-7: #dddad1;
 $main-color-8: #626262;
 $main-color-9: #2e1402;
-$font1: "Krub";
-$font2: "Playfair Display";
-$font3: "Quicksand";
 
 @mixin grid-box {
   background-color: $main-color-3;
   padding: 20px;
   color: $main-color-9;
   border: 1px solid $main-color-6;
+  line-height: 1.4;
 
   img {
     width: 50px;
@@ -29,7 +27,7 @@ $font3: "Quicksand";
 
   p {
     margin: 10px;
-    font-family: $font3;
+    // font-family: $font1;
     font-size: 16px;
   }
 }
