--- a/src/Pages/Home/Home.scss
+++ b/src/Pages/Home/Home.scss
@@ -145,4 +145,48 @@ body {
       font-weight: 600;
     }
   }
+
+  .Home-Horses {
+    width: 100%;
+    margin-top: 90px;
+    margin-bottom: 90px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .Home-Container {
+      width: 1500px;
+      height: 650px;
+      display: grid;
+      grid-template-columns: repeat(30, 50px);
+      grid-template-rows: repeat(13, 50px);
+
+      .Home-Horse1 {
+        grid-area: 5/1/10/7;
+        background-color: rgb(0, 255, 255);
+        width: 300px;
+      }
+
+      .Home-Horse2 {
+        grid-area: 1/10/7/16;
+        width: 300px;
+      }
+      .Home-Horse3 {
+        grid-area: 8/8/13/13;
+        width: 250px;
+      }
+      .Home-Horse4 {
+        grid-area: 2/19/7/23;
+        width: 250px;
+      }
+      .Home-Horse5 {
+        grid-area: 8/16/13/21;
+        width: 300px;
+      }
+      .Home-Horse6 {
+        grid-area: 5/25/10/31;
+        width: 300px;
+      }
+    }
+  }
 }
