--- a/src/Pages/Layouts/NavBar/NavBar.scss
+++ b/src/Pages/Layouts/NavBar/NavBar.scss
@@ -26,6 +26,7 @@
       list-style-type: none;
       font-size: 25px;
       padding-right: 50px;
+      font-family: $font-header;
 
       a{
         text-decoration: none;
