--- a/src/Pages/Layouts/Footer/Footer.scss
+++ b/src/Pages/Layouts/Footer/Footer.scss
@@ -2,29 +2,40 @@
 
 .Footer {
   width: 100%;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background-color: $main-color-7;
   color: $main-color-2;
   border: 1px solid $main-color-0;
-  font-size: 18px;
+  font-size: 20px;
   line-height: 1.4;
-  
-	.Footer-box{
-		padding: 30px;
-		display: flex;
-	}
 
-	.Footer-icons{
-		padding: 20px;
-		width: 500px;
-		display: flex;
-		justify-content: space-evenly;
-		align-items: center;
-		border-top: 1px solid $main-color-2;
-		img{
-			width: 70px;
-		}
-	}
+  .Footer-box {
+    padding: 30px;
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+
+    h4 {
+      font-family: $font-header;
+    }
+
+    p {
+      font-family: $font-title;
+      font-weight: 600;
+    }
+  }
+
+  .Footer-icons {
+    padding: 20px;
+    width: 500px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    border-top: 1px solid $main-color-2;
+    img {
+      width: 70px;
+    }
+  }
 }
