--- a/src/Pages/_variables.scss
+++ b/src/Pages/_variables.scss
@@ -8,6 +8,8 @@ $main-color-6: #cfc9bb;
 $main-color-7: #dddad1;
 $main-color-8: #626262;
 $main-color-9: #2e1402;
+$font-header: "Nunito", sans-serif;
+$font-title: "Cormorant Garamond", serif;
 
 @mixin grid-box {
   background-color: $main-color-3;
@@ -23,11 +25,14 @@ $main-color-9: #2e1402;
     display: flex;
     align-items: center;
     gap: 10px;
+    font-size: 18px;
+    font-family: $font-header;
   }
 
   p {
     margin: 10px;
-    // font-family: $font1;
-    font-size: 16px;
+    font-family: $font-title;
+    font-size: 18px;
+    font-weight: 600;
   }
 }
