About part done

--- a/src/Pages/_variables.scss
+++ b/src/Pages/_variables.scss
@@ -8,6 +8,7 @@ $main-color-6: #cfc9bb;
 $main-color-7: #dddad1;
 $main-color-8: #626262;
 $main-color-9: #2e1402;
+$main-color-10: #7c6d58;
 $font-header: "Nunito", sans-serif;
 $font-title: "Cormorant Garamond", serif;
 
@@ -33,6 +34,6 @@ $font-title: "Cormorant Garamond", serif;
     margin: 10px;
     font-family: $font-title;
     font-size: 18px;
-    font-weight: 600;
+    font-weight: 700;
   }
 }
