--- a/src/Pages/AboutUs/AboutUs.scss
+++ b/src/Pages/AboutUs/AboutUs.scss
@@ -8,6 +8,7 @@
 
 .AboutUs {
   font-family: $font-title;
+  width: 100%;
 
   .AboutUsHeader {
     width: 100%;
@@ -47,7 +48,7 @@
       }
     }
 
-    .AboutUs-main{
+    .AboutUs-main {
       width: 40%;
       display: flex;
       justify-content: center;
@@ -57,36 +58,88 @@
       font-weight: 600;
       margin-right: 50px;
 
-
-      h1{
+      h1 {
         font-family: $font-header;
         font-size: 28px;
         padding-bottom: 60px;
+        color: $main-color-9;
       }
 
-      p{
+      p {
         font-family: $font-title;
-        font-size: 20px;
+        font-size: 22px;
+        color: $main-color-9;
+        font-weight: 700;
       }
     }
   }
 
-  .AboutUs-About{
+  .AboutUs-About {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
     margin-top: 90px;
-    width: 95%;
+    position: relative;
 
-    img{
-      width: 550px;
-      border-top-left-radius: 150px;
-      display: inline-block;
+    .AboutUs-img {
+      width: 600px;
+
+      img {
+        width: 600px;
+        border-top-left-radius: 150px;
+      }
     }
 
-    .AboutUs-Container{
-      
-    }
+    .AboutUs-Container {
+      width: 50%;
+      height: 600px;
+      font-family: $font-title;
+      font-size: 24px;
+      line-height: 1.4;
 
+      h1 {
+        font-family: $font-header;
+        font-weight: 700;
+        padding-bottom: 60px;
+        color: $main-color-9;
+      }
+
+      .AboutUs-zrt {
+        font-family: $font-title;
+        font-weight: 600;
+
+        span {
+          margin-right: 20px;
+          width: 500px;
+          display: inline-block;
+          color: $main-color-9;
+        }
+        button {
+          width: 180px;
+          height: 70px;
+          border-radius: 20px;
+          font-size: 22px;
+          font-weight: 600;
+          font-family: $font-title;
+          background-color: $main-color-6;
+          border: 2px solid $main-color-2;
+        }
+      }
+      .AboutUs-numbers {
+        bottom: -5%;
+        right:  12%;
+        position: absolute;
+        padding: 30px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 850px;
+        height: 100px;
+        border: 2px solid $main-color-2;
+        border-radius: 20px;
+        background-color: $main-color-6;
+        font-size: 50px;
+      }
+    }
   }
 }
