--- a/src/Pages/Layouts/NavBar/NavBar.scss
+++ b/src/Pages/Layouts/NavBar/NavBar.scss
@@ -10,7 +10,8 @@
   position: fixed;
   width: 100%;
   height: 60px;
-  background-color: $main-color-7;
+  background-color: $main-color-6;
+  z-index: 3;
 
   header,nav{
     height: 60px;
@@ -30,7 +31,7 @@
 
       a{
         text-decoration: none;
-        color: $main-color-2;
+        color: $main-color-10;
       }
     }
   }
