--- a/src/Pages/AboutUs/AboutUs.scss
+++ b/src/Pages/AboutUs/AboutUs.scss
@@ -127,7 +127,7 @@
       }
       .AboutUs-numbers {
         bottom: -5%;
-        right:  12%;
+        right: 12%;
         position: absolute;
         padding: 30px;
         display: flex;
@@ -140,6 +140,19 @@
         background-color: $main-color-6;
         font-size: 50px;
       }
+    }
+  }
+
+  .AboutUs-icons {
+    width: 1200px;
+    height: 200px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+
+    img{
+      width: 250px;
     }
   }
 }
