--- a/src/Pages/Layouts/Footer/Footer.scss
+++ b/src/Pages/Layouts/Footer/Footer.scss
@@ -1,6 +1,7 @@
 @import "../../variables";
 
 .Footer {
+  margin-top: 90px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -15,6 +16,7 @@
     display: flex;
     justify-content: space-around;
     text-align: center;
+    margin-bottom: 30px;
 
     h4 {
       font-family: $font-header;
@@ -28,14 +30,14 @@
 
   .Footer-icons {
     padding: 20px;
-    width: 500px;
+    height: 150px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     border-top: 1px solid $main-color-10;
 
     img {
-      width: 70px;
+      width: 170px;
     }
   }
 }
