--- a/src/Pages/_variables.scss
+++ b/src/Pages/_variables.scss
@@ -9,8 +9,8 @@ $main-color-7: #dddad1;
 $main-color-8: #626262;
 $main-color-9: #2e1402;
 $main-color-10: #7c6d58;
-$font-header: "Nunito", sans-serif;
-$font-title: "Cormorant Garamond", serif;
+$font-header: "Yeseva One", serif;
+$font-title: "Josefin Sans", sans-serif;
 
 @mixin grid-box {
   background-color: $main-color-3;
