--- a/src/Pages/Home/Home.scss
+++ b/src/Pages/Home/Home.scss
@@ -25,7 +25,7 @@ body {
       justify-content: center;
       align-items: start;
       color: $main-color-2;
-      font-size: 24px;
+      font-size: 22px;
 
       h1 {
         font-family: $font-header;
@@ -172,6 +172,7 @@ body {
             width: 100%;
             height: 800px;
             object-fit: cover;
+            object-position: 50% 100%;
           }
 
           .slide-content {
@@ -183,7 +184,7 @@ body {
             padding: 20px;
 
             h1 {
-              color: $main-color-10;
+              color: $main-color-0;
               font-size: 44px;
               margin-bottom: 10px;
               font-family: $font-header;
@@ -192,7 +193,7 @@ body {
             p {
               font-family: $font-title;
               line-height: 1.4;
-              color: $main-color-10;
+              color: $main-color-0;
               font-size: 34px;
               margin: 0;
             }
