--- a/src/Pages/AboutUs/AboutUs.scss
+++ b/src/Pages/AboutUs/AboutUs.scss
@@ -10,7 +10,7 @@
   font-family: $font-title;
   width: 100%;
 
-  .AboutUsHeader {
+  .AboutUs-Header {
     width: 100%;
     height: 800px;
     display: flex;
@@ -143,7 +143,7 @@
     }
   }
 
-  .AboutUs-icons {
+  .AboutUs-Icons {
     margin-top: 90px;
     margin-left: 40px;
     width: 100%;
