fix a few things

--- a/src/Pages/AboutUs/AboutUs.scss
+++ b/src/Pages/AboutUs/AboutUs.scss
@@ -145,7 +145,6 @@
 
   .AboutUs-Icons {
     margin-top: 90px;
-    margin-left: 40px;
     width: 100%;
     height: auto;
     display: flex;
@@ -153,26 +152,13 @@
     justify-content: space-evenly;
     align-items: center;
 
-    .AboutUsDesign0 {
-      width: 150px;
-    }
-    .AboutUsDesign1 {
-      width: 300px;
-      margin-left: 50px;
-    }
-    .AboutUsDesign2 {
-      width: 300px;
-    }
-    .AboutUsDesign3 {
-      width: 230px;
-      margin-right: 20px;
-    }
-    .AboutUsDesign4 {
-      width: 320px;
+    .AboutUsDesign {
+      width: 250px;
     }
   }
 
   .AboutUs-Competitions {
+    margin-top: 90px;
     display: flex;
     justify-content: center;
     align-items: center;
