--- a/src/Pages/AboutUs/AboutUs.scss
+++ b/src/Pages/AboutUs/AboutUs.scss
@@ -144,7 +144,7 @@
   }
 
   .AboutUs-Icons {
-    margin-top: 90px;
+    margin-top: 110px;
     width: 100%;
     height: auto;
     display: flex;
@@ -158,34 +158,108 @@
   }
 
   .AboutUs-Competitions {
-    margin-top: 90px;
-    width: 100%;
+    margin-top: 100px;
     display: flex;
+    flex-wrap: nowrap;
     justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-    border: 2px solid black;
 
-    .competitionsContainer{
-      width: 50%;
-      height: 700px;
+    .competitionsContainer {
+      margin: 20px;
+      padding: 20px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      width: 46%;
       display: flex;
+      flex-direction: row;
+      align-items: start;
+      background-color: $main-color-5;
 
-      .aboutCompetitions{
-        font-size: 22px;
-        line-height: 1.6;
+      .aboutCompetitions {
+        width: 400px;
+        height: 550px;
+        text-align: center;
+        padding: 20px;
+
+        h1 {
+          font-size: 46px;
+          color: $main-color-9;
+          font-family: $font-header;
+        }
+
+        .cont {
+          position: relative;
+          z-index: 1;
+          width: 380px;
+          height: 400px;
+          margin-top: 40px;
+          border: 4px solid $main-color-2;
+          background-color: $main-color-6;
+          padding: 20px;
+          display: flex;
+          flex-direction: column;
+          gap: 30px;
+
+          .header {
+            img {
+              width: 230px;
+            }
+            p {
+              font-size: 26px;
+            }
+          }
+
+          .middle {
+            p {
+              font-size: 26px;
+            }
+            h1 {
+              font-size: 34px;
+              color: black;
+            }
+          }
+
+          .footer {
+            h3 {
+              font-size: 26px;
+            }
+            p {
+              font-size: 22px;
+            }
+          }
+        }
+
+        .teq1{
+          width: 0;
+          height: 0;
+          border-left: 45vw solid transparent;
+          border-bottom: 22.5vw solid $main-color-2 ;
+          border-bottom-right-radius: 5px;
+          margin-top: -19vw;
+          margin-left: -2vw;
+        }
+
+        .teq2{
+          width: 0;
+          height: 0;
+          border-right: 45vw solid transparent;
+          border-bottom: 35vw solid $main-color-3 ;
+          border-bottom-left-radius: 5px;
+          margin-top: -35vw;
+          margin-left: -2.5vw;
+        }
       }
 
-      .competitionImg1{
+      .competitionImg {
         position: relative;
-        
-        img{
+
+        span {
           position: absolute;
-          top: 5%;
-          left: 10%;
-          width: 600px;
-          background-color: #a87272;
+          top: 80px;
+          left: -60px;
+        }
+
+        img {
+          width: 420px
         }
       }
     }
