--- a/src/Pages/Home/Home.scss
+++ b/src/Pages/Home/Home.scss
@@ -49,7 +49,7 @@ body {
     margin-top: 90px;
     width: 100%;
     display: grid;
-    grid-template-columns: 380px 520px 382px 382px;
+    grid-template-columns: 23% 31% 23% 23%;
     grid-template-rows: 250px 250px;
     grid-template-areas:
       "about1 img about2 about2"
