--- a/src/Pages/Home/Home.scss
+++ b/src/Pages/Home/Home.scss
@@ -2,12 +2,11 @@
 
 body {
   box-sizing: border-box;
-  background-color: $main-color-7;
 }
 
 .Home {
   font-family: $font-title;
-
+  
   .Home-main {
     padding-top: 50px;
     width: 100%;
@@ -224,7 +223,7 @@ body {
 
       .Home-Horse1 {
         grid-area: 5/1/10/7;
-        background-color: rgb(0, 255, 255);
+        border: 2px solid $main-color-1;
         width: 300px;
       }
 
