--- a/src/Pages/_variables.scss
+++ b/src/Pages/_variables.scss
@@ -9,6 +9,7 @@ $main-color-7: #dddad1;
 $main-color-8: #626262;
 $main-color-9: #2e1402;
 $main-color-10: #7c6d58;
+$main-color-11: #725c3a;
 $font-header: "Yeseva One", serif;
 $font-title: "Josefin Sans", sans-serif;
 
