--- a/src/Pages/Home/Home.scss
+++ b/src/Pages/Home/Home.scss
@@ -1,6 +1,8 @@
 @import "../variables";
 
 body {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
@@ -139,13 +141,37 @@ body {
       }
     }
 
-    .Home-Text {
+    .Home-Text-Container {
       font-family: $font-title;
       width: 40%;
       font-size: 24px;
       line-height: 1.4;
       color: $main-color-10;
       font-weight: 800;
+
+      .Home-Text{
+        width: 500px;
+      }
+
+      h1{
+        font-size: 44px;
+        font-family: $font-header;
+        font-weight: 500;
+        padding-bottom: 36px;
+        color: $main-color-9;
+      }
+
+      button {
+        margin-top: 34px;
+        width: 180px;
+        height: 70px;
+        border-radius: 20px;
+        font-size: 22px;
+        font-weight: 600;
+        font-family: $font-title;
+        background-color: $main-color-6;
+        border: 2px solid $main-color-2;
+      }
     }
   }
 
@@ -203,50 +229,6 @@ body {
 
     .slick-slide.slick-active {
       display: block;
-    }
-  }
-
-  .Home-Horses {
-    width: 100%;
-    margin-top: 90px;
-    margin-bottom: 90px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    .Home-Container {
-      width: 1500px;
-      height: 650px;
-      display: grid;
-      grid-template-columns: repeat(30, 50px);
-      grid-template-rows: repeat(13, 50px);
-
-      .Home-Horse1 {
-        grid-area: 5/1/10/7;
-        border: 2px solid $main-color-1;
-        width: 300px;
-      }
-
-      .Home-Horse2 {
-        grid-area: 1/10/7/16;
-        width: 300px;
-      }
-      .Home-Horse3 {
-        grid-area: 8/8/13/13;
-        width: 250px;
-      }
-      .Home-Horse4 {
-        grid-area: 2/19/7/23;
-        width: 250px;
-      }
-      .Home-Horse5 {
-        grid-area: 8/16/13/21;
-        width: 300px;
-      }
-      .Home-Horse6 {
-        grid-area: 5/25/10/31;
-        width: 300px;
-      }
     }
   }
 }
