--- a/src/Pages/Shop/Shop.scss
+++ b/src/Pages/Shop/Shop.scss
@@ -2,20 +2,85 @@
 
 .Shop{
   padding-top: 60px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
-  // margin: 50px;
+  
+  .Shop-Header{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    background-image: url('../../public/E/S-photo.jpeg');
+    height: 600px;
+    background-position: 50% 50%;
+    background-size: cover;
+    background-repeat: no-repeat;
 
-  .Shop-item{
-    width: 400px;
+    h1{
+      padding: 50px;
+      font-family: $font-header;
+      font-size: 28px;
+      padding-bottom: 20px;
+      color: $main-color-1
+    }
 
-    img{
-      width: 200px;
-      height: 200px;
+    span{
+      padding: 50px;
+      font-family: $font-title;
+      width: 40%;
+      font-size: 24px;
+      line-height: 1.4;
+      color: $main-color-1;
+      font-weight: 800;
+    }
+  }
+
+  .Shop-Container{
+    margin-top: 90px;
+    display: flex;
+    justify-content: space-evenly;
+
+    .Shop-Cats{
+      width: 24%;
+      height: 700px;
+      border: 2px solid black;
+    }
+
+    .Shop-Items{
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
+      width: 70%;
+      height: auto;
+      background-color: $main-color-6;
+
+      .Item{
+        text-align: center;
+
+        img{
+          width: 300px;
+          height: 300px;
+          object-fit: cover;
+        }
+
+        p{
+          margin-top: 10px;
+          font-family: $font-title;
+          color: $main-color-9;
+          font-weight: 700;
+          font-size: 22px;
+        }
+
+        button{
+          margin-top: 10px;
+          width: 300px;
+          height: 50px;
+          padding: 10px;
+          border: 2px solid $main-color-9;
+          background-color: $main-color-7;
+          color: $main-color-9;
+          font-size: 18px;
+          font-family: $font-title;
+        }
+      }
     }
   }
 }
