--- a/src/Pages/AboutUs/AboutUs.scss
+++ b/src/Pages/AboutUs/AboutUs.scss
@@ -142,7 +142,7 @@
     margin-left: 40px;
 
     .stable {
-      border: solid cadetblue;
+      border: 2px solid $main-color-9;
       padding: 10px;
       width: calc(25% - 50px); 
       margin-bottom: 40px; 
@@ -153,7 +153,7 @@
         margin-top:-35px;
         margin-left:25px;
         color:white;
-        background:cadetblue;
+        background-color: $main-color-7;
         width: 50px;
       }
 
