--- a/src/Pages/Shop/Modal/Modal.scss
+++ b/src/Pages/Shop/Modal/Modal.scss
@@ -1,5 +1,5 @@
 @import "../../variables";
-.Modal{
+.Modal {
   font-family: $font-title;
   width: 100%;
   height: 100vh;
@@ -9,19 +9,19 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgba(0, 0, 0, 0.80);
+  background-color: rgba(0, 0, 0, 0.8);
 
-  .Modal-body{
-    width: 50%;
+  .Modal-body {
+    width: 80%;
     background-color: rgb(226, 226, 226);
     border-radius: 8px;
     padding: 1em;
-    min-height: 140px;
+    height: auto;
     overflow: hidden;
     position: relative;
   }
 
-  .Modal-btn{
+  .Modal-btn {
     position: absolute;
     top: 5px;
     right: 5px;
@@ -36,24 +36,23 @@
     font-size: 14px;
   }
 
-  .Modal-container{
+  .Modal-container {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
 
-    img{
-      width: 400px;
+    img {
+      width: 480px;
     }
 
-    .Modal-cont{
+    .Modal-cont {
       padding: 20px;
     }
 
-    .btnn{
+    .btnn {
       cursor: pointer;
       border-radius: 20px;
-      margin-top: 10px;
       width: 200px;
       height: 40px;
       padding: 10px;
@@ -65,11 +64,67 @@
     }
   }
 
-  .Modal-cont{
+  .Modal-cont {
     gap: 20px;
     display: flex;
     flex-direction: column;
+
+    .icons {
+      width: 400px;
+      height: auto;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: baseline;
+      font-size: 16px;
+
+      span {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      p {
+        padding-left: 10px;
+        display: inline-block;
+      }
+
+      img {
+        width: 36px;
+      }
+
+      .desc {
+        display: flex;
+        flex-direction: column;
+
+        button {
+          padding: 10px;
+          margin-bottom: 10px;
+          width: 600px;
+          height: 30px;
+          border: none;
+          background-color: rgb(226, 226, 226);
+          border-top: 2px solid #ccc;
+          font-size: 16px;
+          font-family: $font-title;
+        }
+
+        .desc{
+          padding: 10px;
+
+        }
+
+        .det {
+          padding: 20px;
+          display: flex;
+          flex-direction: column;
+          gap: 10px;
+
+          h3{
+            display: inline-block;
+          }
+        }
+      }
+    }
   }
 }
-
-
