--- a/src/Pages/Shop/Shop.scss
+++ b/src/Pages/Shop/Shop.scss
@@ -47,17 +47,23 @@
     .Shop-Items{
       display: flex;
       flex-wrap: wrap;
-      justify-content: space-around;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
       width: 70%;
       height: auto;
-      background-color: $main-color-6;
+      background-color: #f7f7f7;
+      cursor: pointer;
 
       .Item{
         text-align: center;
+        width: 350px;
+        height: 500px;
+        background-color: #fff;
 
         img{
-          width: 300px;
-          height: 300px;
+          width: 350px;
+          height: 400px;
           object-fit: cover;
         }
 
@@ -65,8 +71,7 @@
           margin-top: 10px;
           font-family: $font-title;
           color: $main-color-9;
-          font-weight: 700;
-          font-size: 22px;
+          font-size: 16px;
         }
 
         button{
