--- a/src/Pages/Shop/Shop.scss
+++ b/src/Pages/Shop/Shop.scss
@@ -1,28 +1,29 @@
 @import "../variables";
 
-.Shop{
+.Shop {
+  box-sizing: border-box;
   padding-top: 60px;
-  
-  .Shop-Header{
+
+  .Shop-Header {
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    background-image: url('../../public/E/S-photo.jpeg');
+    background-image: url("../../public/E/S-photo.jpeg");
     height: 600px;
     background-position: 50% 50%;
     background-size: cover;
     background-repeat: no-repeat;
 
-    h1{
+    h1 {
       padding: 50px;
       font-family: $font-header;
       font-size: 28px;
       padding-bottom: 20px;
-      color: $main-color-1
+      color: $main-color-1;
     }
 
-    span{
+    span {
       padding: 50px;
       font-family: $font-title;
       width: 40%;
@@ -33,48 +34,55 @@
     }
   }
 
-  .Shop-Container{
+  .Shop-Container {
     margin-top: 90px;
     display: flex;
     justify-content: space-evenly;
 
-    .Shop-Cats{
+    .Shop-Cats {
+      padding: 20px;
       width: 24%;
       height: 700px;
-      border: 2px solid black;
+      background-color: $main-color-2;
+
+      img {
+        width: 40px;
+        cursor: pointer;
+      }
     }
 
-    .Shop-Items{
+    .Shop-Items {
+      padding: 14px;
       display: flex;
       flex-wrap: wrap;
-      justify-content: center;
+      justify-content: space-evenly;
       align-items: center;
-      gap: 20px;
+      gap: 14px;
       width: 70%;
       height: auto;
-      background-color: #f7f7f7;
+      background-color: $main-color-2;
       cursor: pointer;
 
-      .Item{
+      .Item {
         text-align: center;
         width: 350px;
-        height: 500px;
+        height: 515px;
         background-color: #fff;
 
-        img{
+        img {
           width: 350px;
-          height: 400px;
+          height: 415px;
           object-fit: cover;
         }
 
-        p{
+        p {
           margin-top: 10px;
           font-family: $font-title;
           color: $main-color-9;
           font-size: 16px;
         }
 
-        button{
+        button {
           margin-top: 10px;
           width: 300px;
           height: 50px;
