--- a/src/Pages/_variables.scss
+++ b/src/Pages/_variables.scss
@@ -10,6 +10,11 @@ $main-color-8: #626262;
 $main-color-9: #2e1402;
 $main-color-10: #7c6d58;
 $main-color-11: #725c3a;
+$color1: #808080;
+$color2: #c0c0c0;
+$color3: #404040;
+$color4: #8b8378;
+$color5: #d9dddc;
 $font-header: "Yeseva One", serif;
 $font-title: "Josefin Sans", sans-serif;
 
