--- a/src/Pages/Layouts/NavBar/NavBar.scss
+++ b/src/Pages/Layouts/NavBar/NavBar.scss
@@ -29,6 +29,10 @@
       padding-right: 50px;
       font-family: $font-header;
 
+      img{
+        width: 30px;
+      }
+
       a{
         text-decoration: none;
         color: $main-color-11;
