--- a/src/Pages/Shop/Shop.scss
+++ b/src/Pages/Shop/Shop.scss
@@ -45,9 +45,25 @@
       height: 700px;
       background-color: $main-color-2;
 
-      img {
-        width: 40px;
-        cursor: pointer;
+      span{
+        display: block;
+
+        img {
+          width: 40px;
+          cursor: pointer;
+        }
+      }
+
+      button{
+        padding: 10px;
+        margin-bottom: 10px;
+        width: 100%;
+        height: 30px;
+        border: none;
+        background-color: $main-color-2;
+        border-top: 2px solid $main-color-9;
+        font-size: 16px;
+        font-family: $font-title;
       }
     }
 
