--- a/src/Pages/Shop/Modal/Modal.scss
+++ b/src/Pages/Shop/Modal/Modal.scss
@@ -56,17 +56,49 @@
 
     .Modal-cont {
       padding: 20px;
+
+      h3{
+        font-size: 24px;
+      }
+    }
+
+    .Modal-addToCart{
+      display: flex;
+      flex-direction: row;
+      gap: 20px;
+
+      span{
+        border: 2px solid $main-color-9;
+        display: flex;
+        align-items: center;
+
+        button{
+          cursor: pointer;
+          width: 60px;
+          height: 36px;
+          border: none;
+          background-color: $main-color-1;
+          color: $main-color-9;
+          font-size: 24px;
+          font-family: $font-title;
+
+        }
+
+        p{
+          font-size: 22px;
+          font-weight: 500;
+        }
+      }
     }
 
     .btnn {
       cursor: pointer;
-      border-radius: 20px;
       width: 200px;
       height: 40px;
       padding: 10px;
       border: 2px solid $main-color-9;
-      background-color: $main-color-1;
-      color: $main-color-9;
+      background-color: $main-color-9;
+      color: $main-color-1;
       font-size: 18px;
       font-family: $font-title;
     }
@@ -102,6 +134,7 @@
       }
 
       .desc {
+        padding-top: 20px;
         display: flex;
         flex-direction: column;
 
