--- a/src/Pages/Courses/Courses.scss
+++ b/src/Pages/Courses/Courses.scss
@@ -126,6 +126,11 @@ body {
     height: 800px;
     position: relative;
 
+    h1{
+      margin-bottom: 40px;
+      text-align: center;
+    }
+
     .trainer {
       width: 100%;
       display: flex;
@@ -144,7 +149,7 @@ body {
       }
 
       .trainer-about {
-        padding: 100px;
+        padding: 80px;
         width: 55%;
         font-size: 26px;
         line-height: 1.6;
@@ -155,7 +160,7 @@ body {
 
     .trainers {
       position: absolute;
-      top: 66%;
+      top: 80%;
       left: 40%;
       width: 40%;
       display: flex;
