--- a/src/Pages/Shop/Shop.scss
+++ b/src/Pages/Shop/Shop.scss
@@ -42,10 +42,10 @@
     .Shop-Cats {
       padding: 20px;
       width: 24%;
-      height: 700px;
+      height: 600px;
       background-color: $main-color-2;
 
-      span{
+      span {
         display: block;
 
         img {
@@ -54,7 +54,7 @@
         }
       }
 
-      button{
+      button {
         padding: 10px;
         margin-bottom: 10px;
         width: 100%;
@@ -64,6 +64,22 @@
         border-top: 2px solid $main-color-9;
         font-size: 16px;
         font-family: $font-title;
+      }
+
+      .horses-shop {
+        background-color: $main-color-0;
+
+        button {
+          background-color: $main-color-0;
+        }
+      }
+
+      .rider-shop {
+        background-color: $main-color-0;
+
+        button {
+          background-color: $main-color-0;
+        }
       }
     }
 
