--- a/src/Pages/Home/Home.scss
+++ b/src/Pages/Home/Home.scss
@@ -8,7 +8,7 @@ body {
 
 .Home {
   font-family: $font-title;
-  
+
   .Home-main {
     padding-top: 50px;
     width: 100%;
@@ -31,7 +31,7 @@ body {
       h2 {
         font-family: $font-header;
 
-        p{
+        p {
           display: inline-block;
           color: $main-color-7;
         }
@@ -131,11 +131,48 @@ body {
       border: 4px solid $main-color-2;
       position: relative;
 
+      // .Home-imgs:hover {
+      //   animation-name: move1, move2;
+      //   animation-duration: 8s;
+      //   animation-timing-function: ease;
+      //   animation-fill-mode: forwards;
+      // }
+
       .Home-image1 {
         bottom: -10%;
         right: -22%;
         width: 300px;
         position: absolute;
+        animation: move1 8s ease-in-out;
+        animation-direction: normal; 
+        animation-fill-mode: forwards; 
+      }
+
+      @keyframes move1 {
+        0% {
+          bottom: -10%;
+          right: -22%;
+        }
+        25%{
+          bottom: 42%;
+          right: -22%;
+        }
+        50% {
+          bottom: 42%;
+          right: 54%;
+        }
+        75%{
+          bottom: 42%;
+          right: -22%;
+        }
+        100% {
+          bottom: -10%;
+          right: -22%;
+        }
+      }
+
+      .Home-image1:hover {
+        animation-play-state: running;
       }
 
       .Home-image2 {
@@ -143,6 +180,36 @@ body {
         left: -22%;
         width: 300px;
         position: absolute;
+        animation: move2 8s ease-in-out;
+        animation-direction: normal; 
+        animation-fill-mode: forwards; 
+      }
+      
+      @keyframes move2 {
+        0% {
+          top: -10%;
+          left: -22%;
+        }
+        25%{
+          top: 42%;
+          left: -22%;
+        }
+        50% {
+          top: 42%;
+          left: 54%;
+        }
+        75%{
+          top: 42%;
+          left: -22%;
+        }
+        100% {
+          top: -10%;
+          left: -22%;
+        }
+      }
+      
+      .Home-image2:hover {        
+        animation-play-state: running;
       }
     }
 
@@ -154,11 +221,11 @@ body {
       color: $main-color-10;
       font-weight: 800;
 
-      .Home-Text{
+      .Home-Text {
         width: 500px;
       }
 
-      h1{
+      h1 {
         font-size: 44px;
         font-family: $font-header;
         font-weight: 500;
@@ -178,7 +245,7 @@ body {
         background-color: $main-color-11;
         border: 2px solid $main-color-2;
 
-        a{
+        a {
           text-decoration: none;
           color: $main-color-1;
         }
